move availableQueryOptions to dbcommands_generic so it works in mongos SERVER-2462